@@ -20,7 +20,6 @@
 #ifndef MB_SETTINGS_H_
 #define MB_SETTINGS_H_
 
-
 #ifndef BITFIELD_T_DEFINED
 #define BITFIELD_T_DEFINED
 /*! \brief Dummy type used to indicate that a specific struct member
@@ -28,6 +27,23 @@
  */
 typedef unsigned int bitfield_t;
 #endif
+
+/*! \brief Enumeration of different communication protocols available
+ * 
+ * The different strategies are:
+ *  - Old comm routines (OLD): Comm routine pre 0.2.1. Similar to HANDSHAKE
+ *    but does not consider board access modes.
+ *  - Staged Issends (HANDSHAKE): similar to OLD, but takes into account
+ *    access modes and sync patterns.
+ */
+enum MBIt_config_protocols {
+    MB_CONFIG_PROTO_START,
+    
+    MB_CONFIG_PROTO_HANDSHAKE,
+    MB_CONFIG_PROTO_OLD,
+    
+    MB_CONFIG_PROTO_END
+};
 
 /*! \brief Datastructure to store global settings */
 struct MBIt_config_data {
@@ -39,6 +55,12 @@ struct MBIt_config_data {
      * Used to define memory pool size in MB_Create()
      */
     unsigned int mempool_blocksize;
+    
+    /*! \brief ID of communication protocol to use 
+
+     * 
+     */
+    enum MBIt_config_protocols comm_protocol;
 };
 
 /*! \brief Variable storing global settings
