@@ -4,16 +4,22 @@
 	  read configuration settings from environment variables
 	* :MBOARD_MEMPOOL_RECYCLE env var can be set to allow message 
 	  boards to recycle allocated memory. (default: disabled)
+	* :MBOARD_MEMPOOL_BLOCKSIZE env var can be set to change the block
+	  size of memory pools. (default: 512 messages)
+	* :MBOARD_COMM_PROTOCOL env var can be set to change the communication
+	  protocol used for board syncs. (default: HANDSHAKE)
 	  
 	* configure.ac, src/parallel/*.c: renamed --enable-developer config
 	  option to --enable-unsafe-checks. 
 	  
 	* src/*/setaccessmode.c: MB_SetAccessMode() routine added to set
 	  access mode of board. 
+	* src/*/setsyncpattern.c: MB_SetSyncPattern() routine added to fine tune
+	  synchronisation pattern of board.
 
 	* src/parallel/comm*: New communication protocol implemented to make
-	  use of board access modes and allow better communication overlap
-	  and reduce lock-stepping of processors.
+	  use of board access modes and sync patterns to allow better communication
+	  overlap and reduce lock-stepping of processors.
 	  
 	   
 2009-07-20 Lee-Shawn Chin <shawn.chin@_NOSPAM_stfc.ac.uk>
